<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".Regster">

    <ImageView
        android:id="@+id/imageViewlogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo2"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text="@string/create_new_account"
        android:textColor="#3D1458"
        android:textStyle="bold"
        android:textSize="20sp"/>



    <EditText
        android:id="@+id/editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:inputType="textPersonName"
        android:textDirection="rtl"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_person"
        android:background="@drawable/selector_edittext"
        android:hint="@string/full_name" />


    <EditText
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="233dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/selector_edittext"
        android:drawableStart="@drawable/ic_email_register"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textDirection="rtl" />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/selector_edittext"
        android:drawableStart="@drawable/ic_showpass"
        android:gravity="end"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textDirection="rtl" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/shape"
        android:text="@string/sign_in_txt"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>