<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".EditProfileInfo">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_96sdp"
        android:layout_height="@dimen/_96sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_camera_alt"
        app:civ_border_color="#00000000"
        app:civ_border_width="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_110sdp"
        android:text="@string/edit_profile_info"
        android:textColor="#3D1458"
        android:textStyle="bold"
        android:textSize="@dimen/_20ssp"/>


    <EditText
        android:id="@+id/editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_184sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/selector_edittext"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="@dimen/_10sdp"
        android:textDirection="rtl" />

    <EditText
        android:id="@+id/editphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_243sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/selector_edittext"
        android:drawableStart="@drawable/ic_phone"
        android:gravity="end"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:padding="@dimen/_10sdp" />

    <EditText
        android:id="@+id/editemail"
        android:textDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_305sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:background="@drawable/selector_edittext"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_email_register"
        android:hint="@string/email_address" />


    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_55sdp"
        android:background="@drawable/shape"
        android:text="@string/edit_btn"
        android:textColor="#fff"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>